@@ -6,7 +6,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -33,43 +32,53 @@ public class RecommendationService {
 	private OfferRepository offerRepository;
 	
 	
+	/**
+	 * Retrieve the recommended offers for a user using the jaccard algorithm
+	 * @param userid
+	 * @return
+	 */
 	public List<OfferDto> jaccardRecommendation(int userid) {
-		Map<String, Integer> requestBody = new HashMap<>();
-		requestBody.put("id", userid);
-		
-		URI uri = null;
-		try {
-			uri = new URI(String.format("%srecommendation/jaccard", pythonServerPath));
-		} catch(URISyntaxException e) {
-			return Collections.emptyList();
-		}
-		ResponseEntity<Map<String, List<String>>> responseEntity = ConvertUtils.toT(restTemplate.postForEntity(uri, requestBody, Map.class));
-		Map<String, List<String>> body = responseEntity.getBody();
-		List<Integer> listOfferId = body.get("recommendation_list")
-				.stream()
-				.map(Integer::valueOf)
-				.collect(Collectors.toList());
-		
-		List<Offer> findByIdIn = offerRepository.findByIdIn(listOfferId);
-		return OfferToOfferDtoMapper.INSTANCE.listOfferToListOfferDto(findByIdIn);
+		return retrieveData(userid, "%srecommendation/jaccard");
 	}
 	
-	public List<OfferDto> factoMatrixRecommendation(int userid) {
+	/**
+	 * Retrieve the recommended offers for a user using the matrix factorisation algorithm
+	 * @param userid
+	 * @return
+	 */
+	public List<OfferDto> matrixRecommendation(int userid) {
+		return retrieveData(userid, "%srecommendation/matrix");
+	}
+	
+	
+	/**
+	 * Retrieve the recommended offers for a user.
+	 * The process being the same for the two algorithms, we extracted process to improve maintainability
+	 * @param userid
+	 * @param formatString
+	 * @return
+	 */
+	private List<OfferDto> retrieveData(int userid, String formatString) {
 		Map<String, Integer> requestBody = new HashMap<>();
 		requestBody.put("id", userid);
 		
 		URI uri = null;
 		try {
-			uri = new URI(String.format("%srecommendation/matrix", pythonServerPath));
+			uri = new URI(String.format(formatString, pythonServerPath));
 		} catch(URISyntaxException e) {
 			return Collections.emptyList();
 		}
 		ResponseEntity<Map<String, List<String>>> responseEntity = ConvertUtils.toT(restTemplate.postForEntity(uri, requestBody, Map.class));
 		Map<String, List<String>> body = responseEntity.getBody();
+		
+		if (body == null) {
+			return Collections.emptyList();
+		}
+		
 		List<Integer> listOfferId = body.get("recommendation_list")
 				.stream()
 				.map(Integer::valueOf)
-				.collect(Collectors.toList());
+				.toList();
 		
 		List<Offer> findByIdIn = offerRepository.findByIdIn(listOfferId);
 		return OfferToOfferDtoMapper.INSTANCE.listOfferToListOfferDto(findByIdIn);
